fix security issues
fix security issues

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,11 +1,29 @@
 persistenceUnit.packagesToScan=com.ffg.shelter.model
-
+#comment everything will use h2 db
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#https://cloud.google.com/appengine/docs/java/cloud-sql/
+# google app engine enable this before deploy
+dataSource.driverClassName=com.mysql.jdbc.GoogleDriver
+dataSource.url=jdbc:google:mysql://colcsb:outreachcsb/shelter
+dataSource.username=root
+dataSource.password=yghu123
 
-# google app engine
-dataSource.driverClassName=com.google.appengine.api.rdbms.AppEngineDriver
-dataSource.url=jdbc:google:rdbms://
-dataSource.username=
-dataSource.password=
+#local test remote and it works
+#dataSource.driverClassName=com.mysql.jdbc.Driver
+#dataSource.url=jdbc:mysql://173.194.107.210/shelter
+#dataSource.username=yighu
+#dataSource.password=abcd123
 
-
+#local mysql test
+#dataSource.driverClassName=com.mysql.jdbc.Driver
+#dataSource.url=jdbc:mysql://localhost:3306/shelter
+#dataSource.username=yighu
+#dataSource.password=yghu123
+#The make local work:
+#install mysql
+#use sudo mysql_safe to start mysql
+#sudo mysql with root and no password
+#create database shelter
+#GRANT ALL PRIVILEGES ON shelter.* To 'yighu'@'%' IDENTIFIED BY 'yghu123';
+#FLUSH PRIVILEGES;
+#no start mvn jetty:run and it started
