--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <name>shelter-server</name>
     <groupId>com.ffg.shelter</groupId>
     <artifactId>shelter-server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+<!--
+    <name>csb-staging:shelter</name>
+    <groupId>com.ffg.shelter</groupId>
+    <artifactId>csb-staging</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+-->
 
     <properties>
         <resthub.spring.stack.version>2.1.2</resthub.spring.stack.version>
@@ -58,7 +64,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.25</version>
-            <!--<scope>provided</scope>-->
+            <scope>test</scope> <!--this need be commented out for local test-->
         </dependency>
 
         <dependency>
@@ -216,6 +222,13 @@
                         </connector>
                     </connectors>
                 </configuration>
+ <dependencies>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>0.9.29</version>
+      </dependency>
+    </dependencies>
             </plugin>
 
             <plugin>
